# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("tests") {
  testonly = true
  deps = [
    "algorithms:tests",
    "bin:tests",
    "lib:tests",
    "logger:tests",
    "observation_store:tests",
    "registry:tests",
    "system_data:unittests",
    "uploader:tests",
  ]
}
