# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("pem_util") {
  deps = [
    "$cobalt_root/src/lib/util:pem_util",
  ]
}

group("posix_file_system") {
  deps = [
    "$cobalt_root/src/lib/util:posix_file_system",
  ]
}

group("clock") {
  deps = [
    "$cobalt_root/src/lib/util:clock",
  ]
}

group("datetime_util") {
  public_deps = [
    "$cobalt_root/src/lib/util:datetime_util",
  ]
}
