# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("rappor_encoder") {
  sources = [
    "rappor_config_helper.cc",
    "rappor_config_helper.h",
    "rappor_config_validator.cc",
    "rappor_config_validator.h",
    "rappor_encoder.cc",
    "rappor_encoder.h",
  ]
  configs += [ "$cobalt_root:cobalt_config" ]

  public_deps = [
    "$cobalt_root:cobalt_proto",
    "$cobalt_root/config:cobalt_registry_proto",
    "$cobalt_root/encoder:client_secret",
    "$cobalt_root/util/crypto_util",
    "//src/lib/fxl",
    "//zircon/public/lib/trace",
  ]
}
